# handoff-lint

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/release/v0.1.0/: claims-to-evidence.md  demo-script.md  distribution-copy.md  portfolio-case-study.md  publish-prep.md  release-evidence.md  release-notes.md
handoff_lint/: cli.py  models.py  parser.py  validator.py
tests/: test_cli.py  test_parser.py  test_validator.py
tests/fixtures/: invalid_missing_fields.md  invalid_missing_frontmatter.md  invalid_missing_sections.md  malformed_yaml.md  valid_instruction.md  warning_empty_approval.md  warning_unbounded_scope.md
