[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handoff-lint"
version = "0.1.0"
description = "A local tool to check coding-agent work instructions before execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

[project.scripts]
handoff-lint = "handoff_lint.cli:main"
